# openai_make_descriptions

./: .gitignore  1000 descriptions.csv  1000.csv  1001.csv  1001.xls  2.py  README.md  conf.py  external_all_6310574.csv  main.py  pyproject.toml
